feat: add auto scroll to methodology cards

--- a/index.html
+++ b/index.html
@@ -259,55 +259,107 @@
       </p>
     </div>
 
-    <div class="process-steps">
-      <div class="process-step">
-        <div class="step-number">01</div>
-        <h3 class="process-step-title">Diagnóstico Completo</h3>
-        <p class="process-step-description">
-          Análise profunda da sua realidade, objetivos e identificação de oportunidades.
-        </p>
-      </div>
-      <div class="process-step">
-        <div class="step-number">02</div>
-        <h3 class="process-step-title">Planejamento Estratégico</h3>
-        <p class="process-step-description">
-          Roadmap detalhado com cronograma, recursos e indicadores de sucesso.
-        </p>
-      </div>
-      <div class="process-step">
-        <div class="step-number">03</div>
-        <h3 class="process-step-title">Design & Protótipo</h3>
-        <p class="process-step-description">
-          Prototipagem interativa para validar fluxos e experiência de usuário.
-        </p>
-      </div>
-      <div class="process-step">
-        <div class="step-number">04</div>
-        <h3 class="process-step-title">Desenvolvimento Ágil</h3>
-        <p class="process-step-description">
-          Entregas incrementais com feedback contínuo e alta adaptabilidade.
-        </p>
-      </div>
-      <div class="process-step">
-        <div class="step-number">05</div>
-        <h3 class="process-step-title">Testes & Qualidade</h3>
-        <p class="process-step-description">
-          Validação de performance, segurança e usabilidade em cada entrega.
-        </p>
-      </div>
-      <div class="process-step">
-        <div class="step-number">06</div>
-        <h3 class="process-step-title">Deploy & Treinamento</h3>
-        <p class="process-step-description">
-          Publicação segura e capacitação da sua equipe para operação autônoma.
-        </p>
-      </div>
-      <div class="process-step">
-        <div class="step-number">07</div>
-        <h3 class="process-step-title">Suporte Contínuo</h3>
-        <p class="process-step-description">
-          Acompanhamento, ajustes e otimizações para garantir resultados duradouros.
-        </p>
+    <div class="process-carousel">
+      <div class="process-track">
+        <div class="process-step">
+          <div class="step-number">01</div>
+          <h3 class="process-step-title">Diagnóstico Completo</h3>
+          <p class="process-step-description">
+            Análise profunda da sua realidade, objetivos e identificação de oportunidades.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">02</div>
+          <h3 class="process-step-title">Planejamento Estratégico</h3>
+          <p class="process-step-description">
+            Roadmap detalhado com cronograma, recursos e indicadores de sucesso.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">03</div>
+          <h3 class="process-step-title">Design & Protótipo</h3>
+          <p class="process-step-description">
+            Prototipagem interativa para validar fluxos e experiência de usuário.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">04</div>
+          <h3 class="process-step-title">Desenvolvimento Ágil</h3>
+          <p class="process-step-description">
+            Entregas incrementais com feedback contínuo e alta adaptabilidade.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">05</div>
+          <h3 class="process-step-title">Testes & Qualidade</h3>
+          <p class="process-step-description">
+            Validação de performance, segurança e usabilidade em cada entrega.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">06</div>
+          <h3 class="process-step-title">Deploy & Treinamento</h3>
+          <p class="process-step-description">
+            Publicação segura e capacitação da sua equipe para operação autônoma.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">07</div>
+          <h3 class="process-step-title">Suporte Contínuo</h3>
+          <p class="process-step-description">
+            Acompanhamento, ajustes e otimizações para garantir resultados duradouros.
+          </p>
+        </div>
+        <!-- Duplicado para rolagem contínua -->
+        <div class="process-step">
+          <div class="step-number">01</div>
+          <h3 class="process-step-title">Diagnóstico Completo</h3>
+          <p class="process-step-description">
+            Análise profunda da sua realidade, objetivos e identificação de oportunidades.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">02</div>
+          <h3 class="process-step-title">Planejamento Estratégico</h3>
+          <p class="process-step-description">
+            Roadmap detalhado com cronograma, recursos e indicadores de sucesso.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">03</div>
+          <h3 class="process-step-title">Design & Protótipo</h3>
+          <p class="process-step-description">
+            Prototipagem interativa para validar fluxos e experiência de usuário.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">04</div>
+          <h3 class="process-step-title">Desenvolvimento Ágil</h3>
+          <p class="process-step-description">
+            Entregas incrementais com feedback contínuo e alta adaptabilidade.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">05</div>
+          <h3 class="process-step-title">Testes & Qualidade</h3>
+          <p class="process-step-description">
+            Validação de performance, segurança e usabilidade em cada entrega.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">06</div>
+          <h3 class="process-step-title">Deploy & Treinamento</h3>
+          <p class="process-step-description">
+            Publicação segura e capacitação da sua equipe para operação autônoma.
+          </p>
+        </div>
+        <div class="process-step">
+          <div class="step-number">07</div>
+          <h3 class="process-step-title">Suporte Contínuo</h3>
+          <p class="process-step-description">
+            Acompanhamento, ajustes e otimizações para garantir resultados duradouros.
+          </p>
+        </div>
       </div>
     </div>
   </div>
