--- a/index.html
+++ b/index.html
@@ -259,111 +259,62 @@
       </p>
     </div>
 
-    <div class="process-carousel">
-      <div class="process-track">
-        <div class="process-step">
-          <div class="step-number">01</div>
-          <h3 class="process-step-title">Diagnóstico Completo</h3>
-          <p class="process-step-description">
-            Análise profunda da sua realidade, objetivos e identificação de oportunidades.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">02</div>
-          <h3 class="process-step-title">Planejamento Estratégico</h3>
-          <p class="process-step-description">
-            Roadmap detalhado com cronograma, recursos e indicadores de sucesso.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">03</div>
-          <h3 class="process-step-title">Design & Protótipo</h3>
-          <p class="process-step-description">
-            Prototipagem interativa para validar fluxos e experiência de usuário.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">04</div>
-          <h3 class="process-step-title">Desenvolvimento Ágil</h3>
-          <p class="process-step-description">
-            Entregas incrementais com feedback contínuo e alta adaptabilidade.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">05</div>
-          <h3 class="process-step-title">Testes & Qualidade</h3>
-          <p class="process-step-description">
-            Validação de performance, segurança e usabilidade em cada entrega.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">06</div>
-          <h3 class="process-step-title">Deploy & Treinamento</h3>
-          <p class="process-step-description">
-            Publicação segura e capacitação da sua equipe para operação autônoma.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">07</div>
-          <h3 class="process-step-title">Suporte Contínuo</h3>
-          <p class="process-step-description">
-            Acompanhamento, ajustes e otimizações para garantir resultados duradouros.
-          </p>
-        </div>
-        <!-- Duplicado para rolagem contínua -->
-        <div class="process-step">
-          <div class="step-number">01</div>
-          <h3 class="process-step-title">Diagnóstico Completo</h3>
-          <p class="process-step-description">
-            Análise profunda da sua realidade, objetivos e identificação de oportunidades.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">02</div>
-          <h3 class="process-step-title">Planejamento Estratégico</h3>
-          <p class="process-step-description">
-            Roadmap detalhado com cronograma, recursos e indicadores de sucesso.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">03</div>
-          <h3 class="process-step-title">Design & Protótipo</h3>
-          <p class="process-step-description">
-            Prototipagem interativa para validar fluxos e experiência de usuário.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">04</div>
-          <h3 class="process-step-title">Desenvolvimento Ágil</h3>
-          <p class="process-step-description">
-            Entregas incrementais com feedback contínuo e alta adaptabilidade.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">05</div>
-          <h3 class="process-step-title">Testes & Qualidade</h3>
-          <p class="process-step-description">
-            Validação de performance, segurança e usabilidade em cada entrega.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">06</div>
-          <h3 class="process-step-title">Deploy & Treinamento</h3>
-          <p class="process-step-description">
-            Publicação segura e capacitação da sua equipe para operação autônoma.
-          </p>
-        </div>
-        <div class="process-step">
-          <div class="step-number">07</div>
-          <h3 class="process-step-title">Suporte Contínuo</h3>
-          <p class="process-step-description">
-            Acompanhamento, ajustes e otimizações para garantir resultados duradouros.
-          </p>
-        </div>
-      </div>
+    <!-- Progress rail -->
+    <div class="method-rail" aria-hidden="true"></div>
+
+    <ol class="steps-grid">
+      <li class="step-card">
+        <span class="step-number">01</span>
+        <h3 class="step-title">Diagnóstico Completo</h3>
+        <p class="step-desc">Análise profunda da sua realidade, objetivos e identificação de oportunidades.</p>
+      </li>
+
+      <li class="step-card">
+        <span class="step-number">02</span>
+        <h3 class="step-title">Planejamento Estratégico</h3>
+        <p class="step-desc">Roadmap com cronograma, recursos e indicadores de sucesso.</p>
+      </li>
+
+      <li class="step-card">
+        <span class="step-number">03</span>
+        <h3 class="step-title">Design & Protótipo</h3>
+        <p class="step-desc">Prototipagem interativa para validar fluxos e experiência de usuário.</p>
+      </li>
+
+      <li class="step-card">
+        <span class="step-number">04</span>
+        <h3 class="step-title">Desenvolvimento Ágil</h3>
+        <p class="step-desc">Entregas incrementais com feedback contínuo e alta adaptabilidade.</p>
+      </li>
+
+      <li class="step-card">
+        <span class="step-number">05</span>
+        <h3 class="step-title">Testes & Qualidade</h3>
+        <p class="step-desc">Validação de performance, segurança e usabilidade em cada entrega.</p>
+      </li>
+
+      <li class="step-card">
+        <span class="step-number">06</span>
+        <h3 class="step-title">Deploy & Treinamento</h3>
+        <p class="step-desc">Publicação segura e capacitação da equipe para operação autônoma.</p>
+      </li>
+
+      <li class="step-card">
+        <span class="step-number">07</span>
+        <h3 class="step-title">Suporte Contínuo</h3>
+        <p class="step-desc">Acompanhamento, ajustes e otimizações para resultados duradouros.</p>
+      </li>
+    </ol>
+
+    <div class="method-cta">
+      <button class="btn btn-primary btn-large" onclick="document.getElementById('contato').scrollIntoView({behavior:'smooth'})">
+        Quero aplicar essa metodologia
+        <span class="arrow">→</span>
+      </button>
     </div>
   </div>
 </section>
+
 
 
 
