--- a/index.html
+++ b/index.html
@@ -319,95 +319,73 @@
 
 
     <!-- Cases Section -->
-<section id="cases" class="homepage-cases">
+<section id="cases" class="cases-behance">
   <div class="container">
     <div class="section-header">
       <div class="badge">Resultados Comprovados</div>
       <h2 class="section-title">Cases de sucesso que transformaram negócios</h2>
-      <p class="section-subtitle">Projetos reais que demonstram o impacto da inteligência artificial nos resultados das empresas</p>
+      <p class="section-subtitle">Projetos reais com design e tecnologia de alto nível</p>
     </div>
 
-    <div class="cases-carousel">
-      <button class="cases-nav prev" aria-label="Anterior">‹</button>
+    <div class="bh-carousel">
+      <button class="bh-nav prev" aria-label="Anterior">‹</button>
 
-      <div class="cases-viewport">
-        <div class="cases-track">
-          <!-- SLIDE 1 -->
-          <article class="case-slide">
-            <header class="case-chip">
-              <i class="fas fa-cart-shopping"></i> E-commerce
-            </header>
-
-            <h3 class="case-title">Vitriny AI — Conversão +47%</h3>
-
-            <div class="case-visual phone">
-              <img src="assets/cases/vitriny-app.png" alt="Tela do app Vitriny AI">
+      <div class="bh-viewport">
+        <div class="bh-track">
+          <!-- CARD -->
+          <article class="bh-card">
+            <div class="bh-media">
+              <img src="assets/cases/vitriny-cover.jpg" alt="Vitriny AI">
             </div>
-
-            <p class="case-teaser">
-              Loja virtual com IA que aumentou ticket e reduziu abandono de carrinho.
-            </p>
+            <div class="bh-overlay">
+              <div class="bh-chip"><i class="fas fa-cart-shopping"></i> E-commerce</div>
+              <h3 class="bh-title">Vitriny AI — Conversão +47%</h3>
+              <p class="bh-desc">E-commerce com IA, aumento de ticket e redução de abandono.</p>
+              <ul class="bh-tags">
+                <li>Next.js</li><li>IA</li><li>Checkout</li>
+              </ul>
+            </div>
           </article>
 
-          <!-- SLIDE 2 -->
-          <article class="case-slide">
-            <header class="case-chip">
-              <i class="fas fa-shield-halved"></i> Financeiro
-            </header>
-
-            <h3 class="case-title">IA Antifraude — Fraudes −85%</h3>
-
-            <div class="case-visual phone">
-              <img src="assets/cases/antifraude-app.png" alt="Tela do app Antifraude">
+          <article class="bh-card">
+            <div class="bh-media">
+              <img src="assets/cases/antifraude-cover.jpg" alt="IA Antifraude">
             </div>
-
-            <p class="case-teaser">
-              Detecção em tempo real com precisão de 99,2% e milhões em economia anual.
-            </p>
+            <div class="bh-overlay">
+              <div class="bh-chip"><i class="fas fa-shield-halved"></i> Financeiro</div>
+              <h3 class="bh-title">IA Antifraude — Fraudes −85%</h3>
+              <p class="bh-desc">Detecção em tempo real com 99,2% de precisão.</p>
+              <ul class="bh-tags">
+                <li>Python</li><li>Stream</li><li>ML</li>
+              </ul>
+            </div>
           </article>
 
-          <!-- SLIDE 3 -->
-          <article class="case-slide">
-            <header class="case-chip">
-              <i class="fas fa-robot"></i> Operações
-            </header>
-
-            <h3 class="case-title">RPA — Processos 80% mais rápidos</h3>
-
-            <div class="case-visual phone">
-              <img src="assets/cases/rpa-app.png" alt="Tela do app RPA">
+          <article class="bh-card">
+            <div class="bh-media">
+              <img src="assets/cases/rpa-cover.jpg" alt="RPA">
             </div>
-
-            <p class="case-teaser">
-              Robôs tirando o peso do operacional e liberando o time pro estratégico.
-            </p>
+            <div class="bh-overlay">
+              <div class="bh-chip"><i class="fas fa-robot"></i> Operações</div>
+              <h3 class="bh-title">RPA — 80% mais rápido</h3>
+              <p class="bh-desc">Automação de processos e redução de custos.</p>
+              <ul class="bh-tags">
+                <li>n8n</li><li>GCP</li><li>APIs</li>
+              </ul>
+            </div>
           </article>
 
-          <!-- SLIDE 4 (exemplo extra) -->
-          <article class="case-slide">
-            <header class="case-chip">
-              <i class="fas fa-hospital-user"></i> Saúde
-            </header>
-
-            <h3 class="case-title">Triage AI — SLA −40%</h3>
-
-            <div class="case-visual phone">
-              <img src="assets/cases/triage-app.png" alt="Tela do app Triage AI">
-            </div>
-
-            <p class="case-teaser">
-              Priorização automática de atendimentos e redução no tempo de resposta.
-            </p>
-          </article>
+          <!-- adicione mais artigos conforme precisar -->
         </div>
       </div>
 
-      <button class="cases-nav next" aria-label="Próximo">›</button>
+      <button class="bh-nav next" aria-label="Próximo">›</button>
     </div>
 
-    <div class="cases-dots" aria-hidden="true"></div>
+    <div class="bh-dots" aria-hidden="true"></div>
   </div>
 </section>
+
 
 
     <!-- Depoimentos -->
