--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <!-- CARD -->
           <article class="bh-card">
             <div class="bh-media">
-              <img src="assets/cases/vitriny-cover.jpg" alt="Vitriny AI">
+              <img src="assets/vitriny-cover.jpg" alt="Vitriny AI">
             </div>
             <div class="bh-overlay">
               <div class="bh-chip"><i class="fas fa-cart-shopping"></i> E-commerce</div>
