--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
           <article class="bh-card">
             <div class="bh-media">
-              <img src="assets/cases/antifraude-cover.jpg" alt="IA Antifraude">
+              <img src="assets/dansa-cover.jpg" alt="IA Antifraude">
             </div>
             <div class="bh-overlay">
               <div class="bh-chip"><i class="fas fa-shield-halved"></i> Financeiro</div>
