--- a/index.html
+++ b/index.html
@@ -859,6 +859,8 @@
     </div>
 
     <script src="js/script.js"></script>
+    <script src="js/cases-gallery.js" defer></script>
+
 </body>
 </html>
 
