--- a/index.html
+++ b/index.html
@@ -332,9 +332,13 @@
       <article class="case-card"
         data-title="CRM Iled Produções"
         data-images='[
-          "assets/cases/iled/01.jpg",
-          "assets/cases/iled/02.jpg",
-          "assets/cases/iled/03.jpg"
+          "assets/cases/case01/case01.png",
+          "assets/cases/case01/case02.png",
+          "assets/cases/case01/case03.png",
+          "assets/cases/case01/case04.png",
+          "assets/cases/case01/case05.png",
+          "assets/cases/case01/case06.png",
+          "assets/cases/case01/case07.png"
         ]'
         data-tags="CRM, Automação, WhatsApp">
         <div class="case-card__media">
