--- a/index.html
+++ b/index.html
@@ -330,24 +330,24 @@
     <div class="cases__grid">
       <!-- Card 1 -->
       <article class="case-card"
-        data-title="CRM Iled Produções"
+        data-title="Sistema de Gestão Dan-sa"
         data-images='[
-          "assets/cases/case01/case01.png",
-          "assets/cases/case01/case02.png",
-          "assets/cases/case01/case03.png",
-          "assets/cases/case01/case04.png",
-          "assets/cases/case01/case05.png",
-          "assets/cases/case01/case06.png",
-          "assets/cases/case01/case07.png"
+          "assets/case01/case01.png",
+          "assets/case01/case02.png",
+          "assets/case01/case03.png",
+          "assets/case01/case04.png",
+          "assets/case01/case05.png",
+          "assets/case01/case06.png",
+          "assets/case01/case07.png"
         ]'
-        data-tags="CRM, Automação, WhatsApp">
+        data-tags="CRM, Financeiro, Aulas Online">
         <div class="case-card__media">
-          <img src="assets/cases/iled/thumb.jpg" alt="CRM Iled Produções" loading="lazy" decoding="async" width="800" height="500">
+          <img src="assets/cases/case01/case01.png" alt="Sistema de gestão Dan-sa " loading="lazy" decoding="async" width="800" height="500">
           <span class="case-card__badge">CRM</span>
         </div>
         <div class="case-card__body">
-          <h3>CRM Iled Produções</h3>
-          <p>Distribuição de leads, SLA dinâmico e integração com WhatsApp para registrar histórico.</p>
+          <h3>Sistema de Gestão Dan-sa</h3>
+          <p>CRM, funil de vendas, gestão financeira, Plataforma de aulas on-line, Gestão de estoques e integração com Marketplaces</p>
         </div>
       </article>
 
