--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         ]'
         data-tags="CRM, Financeiro, Aulas Online">
         <div class="case-card__media">
-          <img src="assets/cases/case01/case01.png" alt="Sistema de gestão Dan-sa " loading="lazy" decoding="async" width="800" height="500">
+          <img src="assets/case01/case01.png" alt="Sistema de gestão Dan-sa " loading="lazy" decoding="async" width="800" height="500">
           <span class="case-card__badge">CRM</span>
         </div>
         <div class="case-card__body">
