--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
   <div class="container">
     <header class="cases__header">
       <h2>Projetos em Destaque</h2>
-      <p>Alguns dos trabalhos recentes combinando automação, UX e IA.</p>
+      <p>Projetos 100% customizados de acordo com as suas necessidades</p>
     </header>
 
     <div class="cases__grid">
@@ -353,12 +353,16 @@
 
       <!-- Card 2 -->
       <article class="case-card"
-        data-title="Vitriny Landing"
+        data-title="Cout Barbershop"
         data-images='[
-          "assets/cases/vitriny/01.jpg",
-          "assets/cases/vitriny/02.jpg",
-          "assets/cases/vitriny/03.jpg"
-        ]'
+          "assets/cases02/case02_01.png",
+          "assets/cases02/case02_02.png",
+          "assets/cases02/case02_03.png",
+          "assets/cases02/case02_04.png",
+          "assets/cases02/case02_05.png",
+          "assets/cases02/case02_06.png",
+          "assets/cases02/case02_07.png"
+          ]'
         data-tags="Landing, Conversão, Teste A/B">
         <div class="case-card__media">
           <img src="assets/cases/vitriny/thumb.jpg" alt="Vitriny Landing" loading="lazy" decoding="async" width="800" height="500">
